# mlx-audiollm

./: .bandit.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  dependency-review.yml  publish.yml  release.yml  security.yml
mlx_meralion/: __init__.py  adaptor.py  inference.py  model.py  processor.py  whisper_encoder.py
tests/: __init__.py  benchmark_batch.py  conftest.py  test_adaptor.py  test_inference.py  test_model.py  test_processor.py  test_whisper_encoder.py
