[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-meralion"
version = "0.1.1"
description = "MLX-native inference for MERaLiON AudioLLM on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yingxu He"},
]
keywords = ["mlx", "apple-silicon", "speech", "asr", "audio", "llm", "meralion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx>=0.18.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "tokenizers>=0.15.0",
    "transformers>=4.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/YingxuH/mlx-audiollm"
Repository = "https://github.com/YingxuH/mlx-audiollm"
Issues = "https://github.com/YingxuH/mlx-audiollm/issues"
Changelog = "https://github.com/YingxuH/mlx-audiollm/blob/main/CHANGELOG.md"

[project.scripts]
mlx-meralion = "mlx_meralion.inference:main"

[tool.setuptools.packages.find]
include = ["mlx_meralion*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip3 install build && python3 -m build"
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --color=yes"
markers = [
    "requires_model: marks tests that require model weights",
    "slow: marks tests as slow (deselect with -m 'not slow')",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
